--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@angular-devkit/core": "21.1.1",
     "@angular-devkit/schematics": "21.1.1",
     "@angular/build": "21.1.1",
-    "@angular/cli": "21.1.1",
+    "@angular/cli": "^21.1.3",
     "@angular/compiler-cli": "21.1.1",
     "@angular/language-service": "21.1.1",
     "@eslint/js": "^9.8.0",
@@ -56,7 +56,7 @@
     "@vitest/coverage-v8": "4.0.9",
     "@vitest/ui": "4.0.9",
     "angular-eslint": "21.1.0",
-    "esbuild": "^0.19.2",
+    "esbuild": "^0.27.3",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
