--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@angular/platform-server": "21.1.1",
     "@angular/router": "21.1.1",
     "@angular/ssr": "21.1.1",
+    "@nestjs/axios": "^4.0.1",
+    "@nestjs/bull": "^11.0.4",
     "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.0",
     "@nestjs/event-emitter": "^3.0.1",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/schedule": "^6.1.1",
     "@nestjs/swagger": "^11.2.6",
+    "@nestjs/throttler": "^6.5.0",
     "apexcharts": "^5.3.6",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
